package activity;

public interface Moveable {
}
