package activity;

public interface Talkable {
    public void say (String message);
}
